--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+body,html {
+    height:100%;
+    margin:0;
+    padding:0;
+}
+
+footer {
+    background:#000;
+    position:fixed;
+    bottom:0;
+    width:100%;
+    color:#FFF;
+    padding:20px 0px;
+}
+
+footer a {
+    color:#ee52b2;
+}
 body {
     font-family: sans-serif;
     font-weight: 500;
